# alt

./: CMakeLists.txt  README.md
include/: alt.hpp
include/alt_bits/: log.cpp  log.hpp
include/alt_bits/insertion_sort/: insertion_sort.hpp  insertion_sort_impl.hpp
include/alt_bits/sort/: sort.hpp  sort_impl.hpp  sort_templates.hpp
include/alt_bits/sort/sort_policy/: insertion_sort_policy.hpp  insertion_sort_policy_impl.hpp  merge_sort_policy.hpp  merge_sort_policy_impl.hpp
tests/: CMakeLists.txt  insertion_sort_test.cpp  main.cpp  merge_sort_test.cpp
